tests/fail/dangling_pointers/null_pointer_write_zst.stderr
error: Undefined Behavior: memory access failed: null pointer is not a valid pointer
  --> RUSTLIB/core/src/ptr/mod.rs:LL:CC
   |
LL |         copy_nonoverlapping(&src as *const T, dst, 1);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ memory access failed: null pointer is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `std::ptr::write::<[u8; 0]>` at RUSTLIB/core/src/ptr/mod.rs:LL:CC
   = note: inside `std::ptr::mut_ptr::<impl *mut [u8; 0]>::write` at RUSTLIB/core/src/ptr/mut_ptr.rs:LL:CC
note: inside `main` at $DIR/null_pointer_write_zst.rs:LL:CC
  --> $DIR/null_pointer_write_zst.rs:LL:CC
   |
LL |     unsafe { std::ptr::null_mut::<[u8; 0]>().write(zst_val) };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

